# Sales_Decline_Forecasting

./: .gitignore  README.md  proplem_formulation.ipynb  pyproject.toml
notebooks/: attention_lstm.ipynb  correlations.ipynb  eda_analysis.ipynb  llm-forecasting.ipynb  temporal_feature_engineering.ipynb  trend_profiling.ipynb
scripts/: concat.py  data_downloader.sh  data_scraper.py  prepare_dataset.py
